# aiogram-bot-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  commands.py  config.py
bot/db/: __init__.py  core.py  models.py  requests.py
bot/dialogs/: example.py
bot/handlers/: __init__.py  basic.py
bot/locales/ru/: example.ftl
bot/middlewares/: __init__.py  localization.py  throttling.py  user.py
bot/utils/: __init__.py  builders.py  states.py
migrations/: env.py
migrations/versions/: af7d8ba454e2_initial.py
src/: __main__.py  fluent_loader.py
src/db/: models.py
src/handlers/: __init__.py  basic.py
src/locales/en/: example.ftl
src/middlewares/: __init__.py  localization.py  throttling.py  user.py
src/utils/: builders.py  calldata.py
