[tool.poetry]
name = "aiogram-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
aiogram-dialog = "^2.1.0"
beanie = "^1.25.0"
loguru = "^0.7.2"
cachetools = "^5.3.3"
pydantic-settings = "^2.2.1"
aiogram-i18n = {extras = ["compiler"], version = "^1.3.4"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
