[project]
name = "aiogram-bot-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "aiogram-i18n[compiler]>=1.4",
    "beanie>=1.29.0",
    "cachetools>=5.5.2",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
